--- a/user-profile-template/bower.json
+++ b/user-profile-template/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "blueimp-load-image": "^2.10.0"
+    "blueimp-load-image": "^2.10.0",
+    "jquery-ui": "jquery-ui#^1.12.1"
   }
 }
