added more inputs to form

--- a/user-profile-template/bower.json
+++ b/user-profile-template/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "blueimp-load-image": "^2.10.0",
-    "jquery-ui": "jquery-ui#^1.12.1"
+    "jquery-ui": "jquery-ui#^1.12.1",
+    "bootstrap-select": "^1.12.2"
   }
 }
